--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/keystonejs/keystone",
   "license": "MIT",
   "engines": {
-    "node": ">=10.0.0"
+    "node": "14.x"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development PORT=3001 DISABLE_LOGGING=true keystone dev",
