--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development PORT=3001 DISABLE_LOGGING=true keystone dev",
-    "dev:init": "cross-env NODE_ENV=development PORT=3001 INIT_DATA=true DISABLE_LOGGING=true keystone dev",
+    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "dev:init": "cross-env NODE_ENV=development INIT_DATA=true DISABLE_LOGGING=true keystone dev",
     "build": "cross-env NODE_ENV=production keystone build",
-    "start": "cross-env NODE_ENV=production PORT=3001 DOCKER=false keystone start",
-    "start:init": "cross-env NODE_ENV=production PORT=3001 DOCKER=true INIT_DATA=true keystone start",
+    "start": "cross-env NODE_ENV=production DOCKER=false keystone start",
+    "start:init": "cross-env NODE_ENV=production DOCKER=true INIT_DATA=true keystone start",
     "create-tables": "cross-env keystone create-tables",
     "update": "cross-env keystone upgrade-relationships"
   },
