--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@keystonejs/adapter-mongoose": "^11.2.2",
     "@keystonejs/app-admin-ui": "^7.3.9",
     "@keystonejs/app-graphql": "6.3.2",
+    "@keystonejs/app-static": "^5.2.2",
     "@keystonejs/auth-password": "^6.1.2",
     "@keystonejs/fields": "^22.1.3",
     "@keystonejs/fields-cloudinary-image": "^2.0.2",
