--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "dev": "cross-env PORT=3001 NODE_ENV=development DISABLE_LOGGING=true keystone dev",
     "dev:init": "cross-env NODE_ENV=development INIT_DATA=true DISABLE_LOGGING=true keystone dev",
     "build": "cross-env NODE_ENV=production keystone build",
     "start": "cross-env NODE_ENV=production DOCKER=false keystone start",
