--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "start": "cross-env NODE_ENV=production PORT=3001 DOCKER=false keystone start",
     "start:init": "cross-env NODE_ENV=production PORT=3001 DOCKER=true INIT_DATA=true keystone start",
     "create-tables": "cross-env keystone create-tables",
-    "update": "cross-env keystone upgrade-relationships"
+    "update": "cross-env keystone upgrade-relationships",
+    "start:dev": "nodemon cross-env NODE_ENV=development PORT=3001 DISABLE_LOGGING=true server.js"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@keystonejs/adapter-mongoose": "^11.2.2",
     "@keystonejs/app-admin-ui": "^7.3.9",
     "@keystonejs/app-graphql": "6.3.2",
+    "@keystonejs/auth-passport": "^6.1.2",
     "@keystonejs/auth-password": "^6.1.2",
     "@keystonejs/fields": "^22.1.3",
     "@keystonejs/fields-cloudinary-image": "^2.0.2",
@@ -32,8 +35,18 @@
     "@keystonejs/server-side-graphql-client": "2.1.2",
     "cross-env": "7.0.3",
     "express": "4.17.1",
+    "express-session": "^1.17.2",
     "googleapis": "^86.1.0",
     "graphql": "^15.4.0",
-    "nodemailer": "^6.6.3"
+    "http": "^0.0.1-security",
+    "js": "^0.1.0",
+    "nodemailer": "^6.6.3",
+    "parser": "^0.1.4",
+    "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
