--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "cross-env PORT=3001 NODE_ENV=development DISABLE_LOGGING=true keystone dev",
     "dev:init": "cross-env NODE_ENV=development INIT_DATA=true DISABLE_LOGGING=true keystone dev",
     "build": "cross-env NODE_ENV=production keystone build",
-    "start": "cross-env NODE_ENV=production DOCKER=false keystone start",
+    "start": "cross-env NODE_ENV=production keystone start",
     "start:init": "cross-env NODE_ENV=production DOCKER=true INIT_DATA=true keystone start",
     "create-tables": "cross-env keystone create-tables",
     "update": "cross-env keystone upgrade-relationships",
