--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "graphql": "^15.4.0",
     "http": "^0.0.1-security",
     "js": "^0.1.0",
+    "mongodb": "^4.2.2",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.6.3",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
