--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@keystonejs/file-adapters": "^7.0.8",
     "@keystonejs/keystone": "^19.3.3",
     "@keystonejs/server-side-graphql-client": "2.1.2",
+    "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "express": "4.17.1",
     "express-session": "^1.17.2",
@@ -40,10 +41,11 @@
     "graphql": "^15.4.0",
     "http": "^0.0.1-security",
     "js": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemailer": "^6.6.3",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
